[package]
name = "sampsyn"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sampsyn"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
sdl2 = "0.34.3"
hound = "3.4.0"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
