[package]
name = "sampsyn"
version = "0.1.2"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"
description = "A simple wavetable synth that takes it's wavetables from samples."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sampsyn"
path = "src/lib.rs"

[[bin]]
name = "sampsyn"
path = "src/bin.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
simpleio = "0.1.2"
sdl2 = "0.34.3"
hound = "3.4.0"
clap = { version = "3.2.20", features = ["derive"] }

