[package]
name = "sampsyn"
version = "0.1.4"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/codybloemhard/sampsyn"
description = "A simple wavetable synth that takes it's wavetables from samples."
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sampsyn"
path = "src/lib.rs"

[[bin]]
name = "sampsyn"
path = "src/bin.rs"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
bincode = "1.3.3"
simpleio = "0.2.2"
sdl2 = "0.36.0"
hound = "3.5.1"
clap = { version = "4.5.4", features = ["derive"] }

